--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="feat_calendar_filter_by_year">Yearly</string>
     <string name="feat_calendar_filter_by_month">Monthly</string>
     <string name="feat_calendar_filter_by_day">Daily</string>
-    <string name="feat_calendar_filter_by_default">Monthly</string>
+    <string name="feat_calendar_filter_by_default">Yearly</string>
     <string name="feat_calendar_year_updated">Calendar Year updated to %1$d</string>
+    <string name="feat_calendar_month_updated">Month updated to %1$s</string>
 </resources>
