--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="feat_calendar_month_updated">Month updated to %1$s</string>
     <string name="feat_holidays_title">Holidays</string>
     <string name="feat_calendar_filter_by_week">Weekly</string>
+    <string name="settings">Settings</string>
+    <string name="menu_about">About</string>
+    <string name="menu_settings">Settings</string>
+    <string name="about_screen_title">Holidays App</string>
+    <string name="about_screen_app_version">Version 1.0</string>
+    <string name="app_version">1.0</string>
+    <string name="contact_email">andresfelipear@gmail.com</string>
+    <string name="about_screen_feedback">Send us a feedback</string>
 </resources>
