--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="app_version">1.0</string>
     <string name="contact_email">andresfelipear@gmail.com</string>
     <string name="about_screen_feedback">Send us a feedback</string>
+    <string name="navigate_back_icon">Navigate Back</string>
 </resources>
