--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,7 @@
     <string name="menu_about">About</string>
     <string name="menu_settings">Settings</string>
     <string name="about_screen_title">Holidays App</string>
-    <string name="about_screen_app_version">Version 1.0</string>
-    <string name="app_version">1.0</string>
+    <string name="app_version">Version 1.0</string>
     <string name="contact_email">andresfelipear@gmail.com</string>
     <string name="about_screen_feedback">Send us a feedback</string>
     <string name="navigate_back_icon">Navigate Back</string>
