--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="menu_settings">Settings</string>
     <string name="about_screen_title">Holidays App</string>
     <string name="app_version">Version 1.0</string>
-    <string name="contact_email">andresfelipear@gmail.com</string>
+    <string name="contact_email">calendarholidays622@gmail.com</string>
     <string name="about_screen_feedback">Send us a feedback</string>
     <string name="navigate_back_icon">Navigate Back</string>
 </resources>
